added l3vpn resource.

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 minversion = 2.0
-envlist = py36,py37,pep8
+envlist = py37,pep8
 skipsdist = True
 # Automatic envs (pyXX) will only use the python version appropriate to that
 # env and ignore basepython inherited from [testenv] if we set
@@ -14,7 +14,7 @@ install_command = {[testenv:common-constraints]install_command}
 basepython = python3
 setenv =
     VIRTUAL_ENV={envdir}
-    OS_TEST_PATH=cyborg/tests/unit
+    OS_TEST_PATH=dci-controller/tests/unit
 deps =
   -r{toxinidir}/requirements.txt
   -r{toxinidir}/test-requirements.txt
@@ -27,7 +27,7 @@ install_command = pip install -c{env:UPPER_CONSTRAINTS_FILE:https://releases.ope
 [testenv:pep8]
 commands =
     flake8
-    doc8 doc/source/ HACKING.rst README.rst
+    doc8 doc/source/ HACKING.rst README.md
 
 [testenv:pep8-constraints]
 install_command = {[testenv:common-constraints]install_command}
