--- a/etc/dci-controller/README.dci-controller.conf
+++ b/etc/dci-controller/README.dci-controller.conf
@@ -1,4 +1,4 @@
 To generate the sample dci-controller.conf file, run the following
-command from the top level of the cyborg directory:
+command from the top level of the dci-controller directory:
 
 tox -egenconfig
