--- a/setup.cfg
+++ b/setup.cfg
@@ -21,3 +21,7 @@ oslo.config.opts =
 
 console_scripts =
     dci-controller-api = dci.cmd.api:main
+    dci-controller-dbsync = dci.cmd.dbsync:main
+
+dci.database.migration_backend =
+    sqlalchemy = dci.db.sqlalchemy.migration
