--- a/tools/config/dci-controller-config-generator.conf
+++ b/tools/config/dci-controller-config-generator.conf
@@ -1,7 +1,8 @@
 [DEFAULT]
 output_file = etc/dci-controller/dci-controller.conf.sample
 wrap_width = 62
-namespace = dci-controller.conf
+namespace = dci
+namespace = oslo.db
 namespace = oslo.log
 namespace = oslo.service.service
 namespace = oslo.service.sslutils
