--- a/etc/dci-controller/api-paste.ini
+++ b/etc/dci-controller/api-paste.ini
@@ -9,4 +9,4 @@ paste.filter_factory = oslo_middleware:RequestId.factory
 
 [filter:cors]
 paste.filter_factory = oslo_middleware.cors:filter_factory
-oslo_config_project = dci_controller
+oslo_config_project = dci-controller
