--- a/requirements.txt
+++ b/requirements.txt
@@ -14,4 +14,8 @@ oslo.service>=1.0.0,!=1.28.1 # Apache-2.0
 oslo.utils>=3.33.0 # Apache-2.0
 jsonpatch>=1.16,!=1.20 # BSD
 oslo.middleware
-junos-eznc
+junos-eznc==2.6.3
+alembic>=0.8.10
+SQLAlchemy>=0.9.9
+oslo.db>=4.1.0
+oslo.versionedobjects>=1.31.2
