--- a/doc/requirements.txt
+++ b/doc/requirements.txt
@@ -2,8 +2,7 @@
 # of appearance. Changing the order has an impact on the overall integration
 # process, which may cause wedges in the gate later.
 
-sphinx!=1.6.6,!=1.6.7,>=1.6.2,<2.0.0;python_version=='2.7'  # BSD
-sphinx!=1.6.6,!=1.6.7,>=1.6.2;python_version>='3.4'  # BSD
+sphinx==4.3.0
 sphinxcontrib-httpdomain>=1.3.0 # BSD
 sphinxcontrib-pecanwsme>=0.2 # Apache-2.0
 sphinxcontrib-seqdiag>=0.8.4 # BSD
