--- a/tox.ini
+++ b/tox.ini
@@ -56,15 +56,9 @@ ignore-path = .venv,.git,.tox,*lib/python*,*dci-controller.egg*,api-ref/build,do
 [testenv:docs]
 deps = -r{toxinidir}/doc/requirements.txt
 commands =
-    rm -rf doc/source/modules
-    sphinx-apidoc -o doc/source/modules ./dci
-    sphinx-build -W -b html doc/source doc/build/html
-
-[testenv:api-ref]
-# This environment is called from CI scripts to test and publish
-# the API Ref to docs.openstack.org.
-deps = -r{toxinidir}/doc/requirements.txt
-commands =
-  rm -rf api-ref/build
-  sphinx-build -W -b html -d api-ref/build/doctrees api-ref/source api-ref/build/html
+    # NOTE(fanguiju): Do not need the Py3 code docs for dci-controller.
+    #rm -rf doc/source/modules
+    #sphinx-apidoc -o doc/source/modules ./dci
+    rm -rf /opt/dci-controller-docs/build/
+    sphinx-build -W -b html doc/source /opt/dci-controller-docs/build/html
 whitelist_externals = rm
