--- a/requirements.txt
+++ b/requirements.txt
@@ -12,14 +12,12 @@ oslo.config>=1.1.0,!=4.3.0,!=4.4.0 # Apache-2.0
 oslo.log>=1.14.0 # Apache-2.0
 oslo.service>=1.0.0,!=1.28.1 # Apache-2.0
 oslo.utils>=3.33.0 # Apache-2.0
-jsonpatch>=1.16,!=1.20 # BSD
 oslo.middleware
-junos-eznc==2.6.3
-alembic>=0.8.10
-SQLAlchemy>=0.9.9
 oslo.db>=4.1.0
 oslo.versionedobjects>=1.31.2
-netmiko==3.4.0
+jsonpatch>=1.16,!=1.20 # BSD
+alembic>=0.8.10
+SQLAlchemy>=0.9.9
 ncclient==0.6.10
 xmltodict==0.12.0
-taskflows==4.6.4
+taskflow==4.6.4
